# XBTOS-CL

./: .clangd  .gitiginore  CMakeLists.txt  LICENSE  README.md  linker.ld
boot/: boot.asm
kernel/: main.cpp
kernel/fs/: vfs.cpp  vfs.h
kernel/include/: string.h  types.h
kernel/memory/: heap.cpp  heap.h  physmem.cpp  physmem.h  stdlib.cpp
